add exception for missing files